[tool.poetry]
name = "isbe"
version = "0.1.0"
description = ""
authors = ["Fred Yankowski <fcy@imsa.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
